# SDLBros3

./: .clang-format  .gitignore  CMakeLists.txt  run_coverage.sh  sonar-project.properties
.github/workflows/: coverage.yml  sonarcloud.yml
data/agf/title/: three_glow.agf
documents/design/: agf_format_design_document.txt  asf_format_design
source/: Assertions.h  CMakeLists.txt  NonCopy.h  main.cpp
source/engine/: Game.cpp  Game.h  ResourceLoader.cpp  ResourceLoader.h  State.cpp  State.h  Timer.cpp  Timer.h
source/engine/actscript/: CommandIDs.h  Queue.cpp  Queue.h
source/entity/: Entity.cpp  Entity.h
source/gfx/: Animation.cpp  Animation.h  AnimationGroup.cpp  AnimationGroup.h  BackgroundImage.cpp  BackgroundImage.h  FontRenderer.cpp  FontRenderer.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
source/math/: Vec2.h
source/states/: Title.cpp  Title.h
source/system/: File.cpp  File.h  JSONFile.cpp  JSONFile.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
tests/: CMakeLists.txt
tests/engine/: actscript_test.cpp
tests/file/: file_test.cpp
tests/gfx/: agf_test.cpp
tests/test_data/: test.agf
tests/test_data/asf/: bad_event_count.asf  bad_magic.asf  corrupt_file.asf  corrupt_size.asf  test.asf
tests/test_data/evt/: test.evt
tools/AGFEd/: .project
tools/AGFEd/src/io/quaker762/github/smb3/: AGFDiskIO.java  AGFEd.java  AGFExport.java  Animation.java  AnimationPropertiesWindow.java  Frame.java  SheetView.java
